// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjektiSearchService should handle query parameters successfully 1`] = `
Object {
  "from": 0,
  "query": Object {
    "bool": Object {
      "must": Array [
        Object {
          "bool": Object {
            "must": Array [
              Object {
                "prefix": Object {
                  "nimi": "foo",
                },
              },
              Object {
                "prefix": Object {
                  "nimi": "bar",
                },
              },
            ],
          },
        },
        Object {
          "terms": Object {
            "maakunnat": Array [
              6,
            ],
          },
        },
        Object {
          "terms": Object {
            "vaylamuoto.keyword": Array [
              "tie",
            ],
          },
        },
        Object {
          "terms": Object {
            "vaihe.keyword": Array [
              "EI_JULKAISTU",
              "SUUNNITTELU",
              "EI_JULKAISTU_PROJEKTIN_HENKILOT",
            ],
          },
        },
        Object {
          "terms": Object {
            "suunnittelustaVastaavaViranomainen.keyword": Array [
              "VAYLAVIRASTO",
              "UUDENMAAN_ELY",
            ],
          },
        },
        Object {
          "term": Object {
            "projektiTyyppi.keyword": "TIE",
          },
        },
        Object {
          "term": Object {
            "aktiivinen": true,
          },
        },
      ],
    },
  },
  "size": 10,
  "sort": Array [
    Object {
      "paivitetty": Object {
        "order": "desc",
      },
    },
    Object {
      "nimi.keyword": Object {
        "order": "asc",
      },
    },
  ],
}
`;

exports[`ProjektiSearchService should handle query parameters successfully 2`] = `
Object {
  "aggs": Object {
    "aktiivinen": Object {
      "aggs": Object {
        "projektiTyyppi": Object {
          "terms": Object {
            "field": "projektiTyyppi.keyword",
            "size": 10,
          },
        },
      },
      "terms": Object {
        "field": "aktiivinen",
        "size": 10,
      },
    },
  },
  "query": Object {
    "bool": Object {
      "must": Array [
        Object {
          "bool": Object {
            "must": Array [
              Object {
                "prefix": Object {
                  "nimi": "foo",
                },
              },
              Object {
                "prefix": Object {
                  "nimi": "bar",
                },
              },
            ],
          },
        },
        Object {
          "terms": Object {
            "maakunnat": Array [
              6,
            ],
          },
        },
        Object {
          "terms": Object {
            "vaylamuoto.keyword": Array [
              "tie",
            ],
          },
        },
        Object {
          "terms": Object {
            "vaihe.keyword": Array [
              "EI_JULKAISTU",
              "SUUNNITTELU",
              "EI_JULKAISTU_PROJEKTIN_HENKILOT",
            ],
          },
        },
        Object {
          "terms": Object {
            "suunnittelustaVastaavaViranomainen.keyword": Array [
              "VAYLAVIRASTO",
              "UUDENMAAN_ELY",
            ],
          },
        },
      ],
    },
  },
}
`;

exports[`ProjektiSearchService should handle query parameters successfully for public search 1`] = `
Object {
  "from": 0,
  "query": Object {
    "bool": Object {
      "must": Array [
        Object {
          "range": Object {
            "publishTimestamp": Object {
              "lte": "now",
            },
          },
        },
      ],
    },
  },
  "size": 10,
  "sort": Array [
    Object {
      "viimeisinJulkaisu": Object {
        "order": "desc",
      },
    },
    Object {
      "nimi.keyword": Object {
        "order": "asc",
      },
    },
  ],
}
`;

exports[`ProjektiSearchService should handle successful result 1`] = `
Array [
  Object {
    "aktiivinen": true,
    "asiatunnus": "TESTI.123",
    "muokkaajat": Array [
      "A000112",
      "LX1",
    ],
    "nimi": "Maantie 370 Ravikylän jkpp-tie ja liittymien parantaminen",
    "oid": "1",
    "paivitetty": "2023-02-15T09:48:37+02:00",
    "projektiTyyppi": "TIE",
    "projektipaallikko": "Pertti Paallikko",
    "saame": false,
    "suunnittelustaVastaavaViranomainen": "KAAKKOIS_SUOMEN_ELY",
    "vaihe": "EI_JULKAISTU",
    "vaylamuoto": Array [
      "tie",
    ],
  },
  Object {
    "aktiivinen": true,
    "asiatunnus": "PIRELY/8634/2019",
    "maakunnat": Array [
      6,
    ],
    "muokkaajat": Array [
      "A000112",
    ],
    "nimi": "Maantie 249 parantaminen välillä Kaukolantien liittymä – Pehtoorinpolun liittymä, tie- ja rakennussuunnitelma, Sastamala",
    "oid": "2",
    "paivitetty": "2023-04-19T16:40:36+03:00",
    "projektiTyyppi": "TIE",
    "projektipaallikko": "Pekka Paallikko",
    "saame": false,
    "suunnittelustaVastaavaViranomainen": "PIRKANMAAN_ELY",
    "vaihe": "SUUNNITTELU",
    "vaylamuoto": Array [
      "tie",
    ],
    "viimeisinJulkaisu": "2023-02-17",
  },
]
`;
